--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,13 +11,8 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-body {
-  font-size: 15px;
-  font-weight: 500;
-}
-
 @layer base {
   * {
-    @apply font-league-spartan;
+    @apply font-league-spartan text-[15px] font-medium;
   }
 }
